--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -11,7 +11,7 @@
 	</head>
 
 	<body>
-		<center><h1>Game of Thrones</h1></center>
+		<center><h1>ertugul gazi</h1></center>
 		<hr>
 		<div id="topOfPage">
 			<center><img src="images/GOT.jpg" align="center"></img></center>
@@ -82,7 +82,7 @@
 				</tbody>
 			</table>
 		</center>
-		<p>Dedicated to all <strong>Game of Thrones</strong><sup>&reg;</sup> fans</p>
+		<p>Dedicated to all <strong>ertugul gazi</strong><sup>&reg;</sup> fans</p>
 		<p><a href="#topOfPage">top</a></p>
 	</body>
 </html>
